Ajuste do p do dados e css do botão voltar

--- a/simulador/dados/dados.css
+++ b/simulador/dados/dados.css
@@ -63,7 +63,7 @@ button[type="submit"]:hover {
     margin-top: 1px;
 }
 
-.btn-secondary:hover {
+.btn-back:hover {
     background-color: #5a6268;
 }
 
