--- a/simulador/dados/dados.css
+++ b/simulador/dados/dados.css
@@ -1,21 +1,30 @@
-/* Estilos do Formulário de Dados */
+/* Estilos do formulário */
 form {
     display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    background-color: #f0f0f0; /* Fundo cinza ao redor do formulário */
+    flex-direction: column;
+    align-items: center;
+    background-color: #f0f0f0;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    margin: auto;
+}
+
+.form-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    margin-bottom: 20px;
 }
 
 .form-group {
-    width: calc(50% - 15px); /* Largura dos campos de entrada, para ficarem lado a lado */
+    flex: 1 1 calc(50% - 15px); /* Cada campo ocupa metade da largura */
     display: flex;
     flex-direction: column;
 }
 
-label {
+.form-group label {
     font-weight: bold;
     margin-bottom: 5px;
     color: #333;
@@ -30,48 +39,45 @@ input[type="text"] {
     box-sizing: border-box;
 }
 
-button[type="submit"] {
-    width: 100%;
+.estado-civil-container {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.estado-civil-container label {
+    margin: 0 10px;
+    font-weight: normal;
+}
+
+button[type="submit"],
+.btn-back {
+    width: 150px;
     padding: 12px;
     font-size: 16px;
+    margin-top: 10px;
     background-color: #0056b3;
     color: #ffffff;
     border: none;
     border-radius: 20px; /* Arredondar o botão */
     cursor: pointer;
-    margin-top: 10px;
 }
 
 button[type="submit"]:hover {
     background-color: #004494;
 }
 
-.form-buttons-form {
-    display: flex;
-    justify-content: space-between;
-}
-
 .btn-back {
-    width: 100%;
-    padding: 12px;
-    font-size: 16px;
     background-color: #6c757d;
-    color: #fff;
-    border: none;
-    border-radius: 20px; /* Arredondar o botão */
-    cursor: pointer;
-    margin-top: 1px;
 }
 
 .btn-back:hover {
     background-color: #5a6268;
 }
 
-.btn {
-    padding: 10px 20px;
-    font-size: 1rem;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+.btn-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 500px;
+    margin-top: 20px;
 }
